reorganize project structure and fix root entrypoint

--- a/html/assessoria.html
+++ b/html/assessoria.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Massano Assessoria | Contato</title>
-    <link rel="stylesheet" href="stilo.css">
+    <title>Massano Assessoria | Assessoria</title>
+    <link rel="stylesheet" href="../style/stilo.css">
 </head>
-<body data-page="contato">
+<body data-page="assessoria">
 <header class="topbar" id="topbar">
     <div class="topbar-content">
         <a class="brand" href="index.html">
-            <img src="logo 2026.png" alt="Massano Assessoria">
+            <img src="../imagens/logo 2026.png" alt="Massano Assessoria">
             <span>Massano Assessoria</span>
         </a>
         <button class="menu-toggle" id="menuToggle" aria-label="Abrir menu">☰</button>
@@ -29,21 +29,20 @@
 
 <main class="main">
     <section class="page-card">
-        <h1>Contato</h1>
-        <p class="page-lead">Entre em contato para solicitar orçamento gratuito e regularizar sua empresa.</p>
+        <h1>Assessoria Técnica</h1>
+        <p class="page-lead">Centralizamos toda a sua rotina de documentação ocupacional com acompanhamento contínuo.</p>
 
-        <h2>Fale com a nossa equipe</h2>
+        <h2>ASO - Atestado de Saúde Ocupacional</h2>
+        <p>Executamos e acompanhamos exames admissionais, periódicos, mudança de função, retorno ao trabalho e demissionais.</p>
 
-        <a href="https://wa.me/5511999999999" class="btn" target="_blank" rel="noopener noreferrer">Fale no WhatsApp</a>
+        <h2>Recursos úteis</h2>
+        <ul class="list">
+            <li>Orientação para emissão da DIR (Declaração de Inexistência de Risco).</li>
+            <li>Suporte técnico para ajustes no eSocial SST.</li>
+            <li>Acompanhamento de prazos e documentos obrigatórios.</li>
+        </ul>
 
-        <form id="contactForm" class="contact-form">
-            <input type="text" placeholder="Nome" required>
-            <input type="email" placeholder="Email" required>
-            <input type="tel" placeholder="Telefone" required>
-            <textarea placeholder="Mensagem"></textarea>
-            <button type="submit" class="btn">Enviar</button>
-        </form>
-
+        <a href="contato.html" class="btn">Falar com a Assessoria</a>
     </section>
 </main>
 
@@ -54,6 +53,6 @@
     </div>
 </footer>
 
-<script src="script.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
