--- a/html/index.html
+++ b/html/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Massano Assessoria | Início</title>
-    <link rel="stylesheet" href="stilo.css">
+    <link rel="stylesheet" href="../style/stilo.css">
 </head>
 <body>
 <header class="topbar" id="topbar">
     <div class="topbar-content">
         <a class="brand" href="#inicio">
-            <img src="logo 2026.png" alt="Massano Assessoria">
+            <img src="../imagens/logo 2026.png" alt="Massano Assessoria">
             <span>Massano Assessoria</span>
         </a>
         <button class="menu-toggle" id="menuToggle" aria-label="Abrir menu">☰</button>
@@ -154,6 +154,6 @@
     </div>
 </footer>
 
-<script src="script.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
