--- a/html/sobre.html
+++ b/html/sobre.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Massano Assessoria | Assessoria</title>
-    <link rel="stylesheet" href="stilo.css">
+    <title>Massano Assessoria | Sobre</title>
+    <link rel="stylesheet" href="../style/stilo.css">
 </head>
-<body data-page="assessoria">
+<body data-page="sobre">
 <header class="topbar" id="topbar">
     <div class="topbar-content">
         <a class="brand" href="index.html">
-            <img src="logo 2026.png" alt="Massano Assessoria">
+            <img src="../imagens/logo 2026.png" alt="Massano Assessoria">
             <span>Massano Assessoria</span>
         </a>
         <button class="menu-toggle" id="menuToggle" aria-label="Abrir menu">☰</button>
@@ -29,20 +29,21 @@
 
 <main class="main">
     <section class="page-card">
-        <h1>Assessoria Técnica</h1>
-        <p class="page-lead">Centralizamos toda a sua rotina de documentação ocupacional com acompanhamento contínuo.</p>
+        <h1>Sobre a Massano Assessoria</h1>
+        <p class="page-lead">Atuamos com documentação empresarial para pequenos negócios, simplificando processos e reduzindo riscos com foco em segurança do trabalho e conformidade legal.</p>
 
-        <h2>ASO - Atestado de Saúde Ocupacional</h2>
-        <p>Executamos e acompanhamos exames admissionais, periódicos, mudança de função, retorno ao trabalho e demissionais.</p>
+        <h2>Atendemos o seu dia a dia</h2>
+        <p>Ajudamos padarias, mercados, açougues e lojas de roupas a manterem PGR, PCMSO e DIR em dia, evitando multas e fiscalizações inesperadas.</p>
 
-        <h2>Recursos úteis</h2>
+        <h2>Por que escolher a Massano?</h2>
         <ul class="list">
-            <li>Orientação para emissão da DIR (Declaração de Inexistência de Risco).</li>
-            <li>Suporte técnico para ajustes no eSocial SST.</li>
-            <li>Acompanhamento de prazos e documentos obrigatórios.</li>
+            <li>Mais de 10 anos de experiência com PMEs.</li>
+            <li>Soluções personalizadas para cada tipo de negócio.</li>
+            <li>Atendimento nacional com processos digitais.</li>
+            <li>Foco em empresas de grau de risco 2.</li>
         </ul>
 
-        <a href="contato.html" class="btn">Falar com a Assessoria</a>
+        <a href="contato.html" class="btn">Solicitar Orçamento</a>
     </section>
 </main>
 
@@ -53,6 +54,6 @@
     </div>
 </footer>
 
-<script src="script.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
