--- a/html/area-cliente.html
+++ b/html/area-cliente.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Massano Assessoria | Área do Cliente</title>
-    <link rel="stylesheet" href="stilo.css">
+    <link rel="stylesheet" href="../style/stilo.css">
 </head>
 <body data-page="area-cliente">
 <header class="topbar" id="topbar">
     <div class="topbar-content">
         <a class="brand" href="index.html">
-            <img src="logo 2026.png" alt="Massano Assessoria">
+            <img src="../imagens/logo 2026.png" alt="Massano Assessoria">
             <span>Massano Assessoria</span>
         </a>
         <button class="menu-toggle" id="menuToggle" aria-label="Abrir menu">☰</button>
@@ -60,6 +60,6 @@
     </div>
 </footer>
 
-<script src="script.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
