--- a/html/index.html
+++ b/html/index.html
@@ -70,9 +70,9 @@
         </div>
 
         <div class="stats-grid">
-            <article class="stat-card"><strong>+10 anos</strong><span>de experiência</span></article>
-            <article class="stat-card"><strong>100%</strong><span>atendimento digital</span></article>
-            <article class="stat-card"><strong>Brasil</strong><span>cobertura nacional</span></article>
+            <article class="stat-card"><strong class="counter">+10 anos</strong><span>de experiência</span></article>
+            <article class="stat-card"><strong class="counter">100%</strong><span>atendimento digital</span></article>
+            <article class="stat-card"><strong class="rising-letters"><span>B</span><span>r</span><span>a</span><span>s</span><span>i</span><span>l</span></strong><span>cobertura nacional</span></article>
         </div>
     </section>
 
